# ClaudeUsageBar

./: .gitignore  README.md
.github/workflows/: release.yml
app/: ClaudeUsageBar.swift  Info.plist  build.sh
app-rs/: Cargo.toml  README.md  app.manifest  app.rc  build.rs
app-rs/src/: autostart.rs  hotkey.rs  icon.rs  main.rs  notify.rs  popup.rs  state.rs  storage.rs  tray.rs
app-rs/src/api/: claude.rs  mod.rs  status.rs  updates.rs
app-rs/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
app-rs/src/popup/: login.rs  settings.rs  theme.rs
packaging/linux/appimage/: AppRun  build.sh  claude-usage-bar.desktop
packaging/linux/debian/: claude-usage-bar.desktop  postinst
packaging/windows/wix/: License.rtf  build.ps1  installer.wxs
website/: demo.css  demo.js  index.html  latest-v1.json  latest.json  nav-status.css  nav-status.js  robots.txt  sitemap.xml  vercel.json
website/blog/: best-claude-usage-tools-macos.html  claude-code-usage-tracker.html  claude-code-vs-claude-pro-usage.html  claude-pro-usage-limits-explained.html  claude-usage-notifications-mac.html  how-to-avoid-hitting-claude-rate-limits.html  how-to-check-claude-usage-limits.html  index.html
website/status/: index.html
