[package]
name = "claude-usage-bar"
version = "1.2.1"
edition = "2021"
rust-version = "1.78"
description = "Lightweight tray app showing Claude.ai 5h/7d usage limits"
license = "MIT"
repository = "https://github.com/Artzainnn/ClaudeUsageBar"
homepage = "https://claudeusagebar.com"
authors = ["ClaudeUsageBar contributors"]

[[bin]]
name = "claude-usage-bar"
path = "src/main.rs"

[dependencies]
tray-icon = "0.21"
tao = "0.34"
eframe = { version = "0.32", default-features = false, features = ["glow", "wayland", "x11", "default_fonts"] }
egui = "0.32"
image = { version = "0.25", default-features = false, features = ["png"] }
tiny-skia = "0.11"
ureq = { version = "2.10", features = ["tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "vendored", "windows-native"] }
directories = "5"
auto-launch = "0.5"
notify-rust = "4"
global-hotkey = "0.6"
self_update = { version = "0.41", default-features = false, features = ["rustls", "compression-zip-deflate", "archive-zip"] }
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }
once_cell = "1"
parking_lot = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow = "1"
thiserror = "1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_Foundation"] }

[build-dependencies]
embed-resource = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false

[profile.release.package."*"]
opt-level = "z"

[package.metadata.deb]
name = "claude-usage-bar"
maintainer = "ClaudeUsageBar contributors"
copyright = "2026, ClaudeUsageBar contributors"
license-file = ["../LICENSE", "0"]
extended-description = "Lightweight system tray app that displays Claude.ai session and weekly usage limits with color-coded indicators and notifications."
depends = "$auto, libayatana-appindicator3-1 | libappindicator3-1, libgtk-3-0, libssl3 | libssl1.1"
section = "utils"
priority = "optional"
assets = [
    ["target/release/claude-usage-bar", "usr/bin/", "755"],
    ["../packaging/linux/debian/claude-usage-bar.desktop", "usr/share/applications/", "644"],
    ["../packaging/linux/debian/claude-usage-bar.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
]
maintainer-scripts = "../packaging/linux/debian/"
